<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ProfileActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/profileactivity_topbar_bg"
        android:translationZ="-1dp">

        <LinearLayout
            android:id="@+id/profileActivity_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_settings_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/title_setting"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_setting"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_profileActivity_exitIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_xmark_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/profileActivity_videoContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fullscreen_content_controls"
        android:translationZ="-2dp">

        <VideoView
            android:fitsSystemWindows="true"
            android:id="@+id/vi_profileActivity_backgroundVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>



    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center_vertical"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:background="@color/white"
        android:weightSum="2">

        <Button
            android:id="@+id/profileActivity_btnn_signin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="380dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/profileactivity_button_bg"
            android:padding="@dimen/marign_10"
            android:text="@string/Signin"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/profileActivity_btnn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/profileActivity_btnn_signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="380dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:padding="@dimen/marign_10"
            android:text="@string/Signup"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:translationZ="-1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/fullscreen_content_controls">

        <FrameLayout
            android:id="@+id/profileActivity_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profileactivity_bottomsheet_bg"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_remove_24dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileactivity_signup_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:visibility="gone"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_20"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Signup_policy_1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Signup_policy_1_detail"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Signup_policy_2"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Signup_policy_2_detail"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>




</RelativeLayout>